--- a/오답노트.md
+++ b/오답노트.md
@@ -174,3 +174,41 @@ const handleDocumentTypeChange = (type: DocumentType) => {
   }
 };
 ```
+
+## 7. html2canvas lab() 색상 함수 파싱 오류
+
+### 오류 상황
+- PDF 내보내기 시 "Attempting to parse an unsupported color function 'lab'" 오류 발생
+- Tailwind CSS v4에서 사용하는 lab(), lch(), oklch() 색상 함수를 html2canvas가 지원하지 못함
+- html2canvas는 구버전 CSS 색상 형식만 지원
+
+### 해결 방법
+1. PDF 생성 전 모든 lab() 색상을 hex 색상으로 변환
+2. computed style에서 lab() 함수 감지 시 인라인 스타일로 대체
+3. Tailwind 클래스명을 기반으로 적절한 hex 색상 매핑
+4. gradient에서 lab() 사용 시 단색으로 대체
+
+### 적용 코드
+```typescript
+// lab() 색상을 hex로 변환하는 함수
+const convertLabColors = (el: HTMLElement) => {
+  const processElement = (htmlElem: HTMLElement) => {
+    const computedStyle = window.getComputedStyle(htmlElem);
+    const properties = ['backgroundColor', 'color', 'borderColor', ...];
+    
+    properties.forEach(prop => {
+      const value = computedStyle.getPropertyValue(prop);
+      if (value && value.includes('lab')) {
+        // Tailwind 클래스 기반으로 적절한 hex 색상 매핑
+        const className = htmlElem.className;
+        let newColor = '#000000';
+        
+        if (className.includes('blue-500')) newColor = '#3b82f6';
+        // ... 추가 매핑
+        
+        htmlElem.style.setProperty(prop, newColor, 'important');
+      }
+    });
+  };
+};
+```
